--- a/.htaccess
+++ b/.htaccess
@@ -550,7 +550,7 @@ FileETag None
     ExpiresDefault                                      "access plus 1 month"
 
   # CSS
-    ExpiresByType text/css                              "access plus 1 week"
+    ExpiresByType text/css                              "access plus 1 year"
 
   # Data interchange
     ExpiresByType application/json                      "access plus 0 seconds"
@@ -567,7 +567,7 @@ FileETag None
     ExpiresByType text/html                             "access plus 0 seconds"
 
   # JavaScript
-    ExpiresByType application/javascript                "access plus 1 week"
+    ExpiresByType application/javascript                "access plus 1 year"
 
   # Manifest files
     ExpiresByType application/x-web-app-manifest+json   "access plus 0 seconds"
