--- a/package.json
+++ b/package.json
@@ -24,13 +24,15 @@
   "dependencies": {
     "grunt": "~0.4.2",
     "grunt-contrib-clean": "~0.5.0",
-    "grunt-contrib-copy": "~0.5.0",
     "grunt-contrib-connect": "~0.7.1",
+    "grunt-contrib-copy": "~0.5.0",
     "grunt-contrib-cssmin": "~0.9.0",
     "grunt-contrib-uglify": "~0.4.0",
-    "grunt-include-replace": "~1.2.0"
+    "grunt-include-replace": "~1.2.0",
+    "load-grunt-tasks": "~0.4.0",
+    "time-grunt": "~0.2.10"
   },
   "engines": {
-    "node": ">=0.8.0"
+    "node": ">=0.10.0"
   }
 }
