* Add validation support * fix errors * add htmlmin and watch plugins; now `grunt` will watch for file changes and rebuild * update normalize.css to 3.0.1. * minor img compression improvement

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fixubuntu",
-  "version": "0.3.0",
+  "version": "0.4.0",
   "author": "Micah Lee",
   "license": "GNU AGPLv3",
   "homepage": "https://github.com/micahflee/fixubuntu",
@@ -21,16 +21,19 @@
   "scripts": {
     "test": "grunt"
   },
-  "dependencies": {
-    "grunt": "~0.4.2",
+  "devDependencies": {
+    "grunt": "~0.4.4",
     "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-connect": "~0.7.1",
     "grunt-contrib-copy": "~0.5.0",
     "grunt-contrib-cssmin": "~0.9.0",
+    "grunt-contrib-htmlmin": "~0.2.0",
     "grunt-contrib-uglify": "~0.4.0",
+    "grunt-contrib-watch": "~0.6.1",
+    "grunt-html-validation": "~0.1.15",
     "grunt-include-replace": "~1.2.0",
     "load-grunt-tasks": "~0.4.0",
-    "time-grunt": "~0.2.10"
+    "time-grunt": "~0.3.1"
   },
   "engines": {
     "node": ">=0.10.0"
