--- a/package.json
+++ b/package.json
@@ -24,14 +24,16 @@
   "devDependencies": {
     "grunt": "~0.4.4",
     "grunt-contrib-clean": "~0.5.0",
+    "grunt-contrib-concat": "~0.4.0",
     "grunt-contrib-connect": "~0.7.1",
     "grunt-contrib-copy": "~0.5.0",
     "grunt-contrib-cssmin": "~0.9.0",
     "grunt-contrib-htmlmin": "~0.2.0",
     "grunt-contrib-uglify": "~0.4.0",
     "grunt-contrib-watch": "~0.6.1",
+    "grunt-filerev": "~0.2.1",
     "grunt-html-validation": "~0.1.15",
-    "grunt-include-replace": "~1.2.0",
+    "grunt-usemin": "~2.1.1",
     "load-grunt-tasks": "~0.4.0",
     "time-grunt": "~0.3.1"
   },
