--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "grunt-contrib-watch": "~0.6.1",
     "grunt-filerev": "~0.2.1",
     "grunt-html-validation": "~0.1.15",
+    "grunt-uncss": "~0.3.3",
     "grunt-usemin": "~2.1.1",
     "load-grunt-tasks": "~0.4.0",
     "time-grunt": "~0.3.1"
