package.json: fix test script.

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "advertisements"
   ],
   "scripts": {
-    "test": "grunt"
+    "test": "grunt test"
   },
   "devDependencies": {
     "grunt": "~0.4.5",
