--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "grunt-contrib-watch": "~0.6.1",
     "grunt-filerev": "~0.2.1",
     "grunt-html-validation": "~0.1.18",
+    "grunt-text-replace": "~0.3.12",
     "grunt-uncss": "~0.3.6",
     "grunt-usemin": "~2.3.0",
     "load-grunt-tasks": "~0.6.0",
