Update all dependencies.
Also make connect open the page in the browser for us.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "fixubuntu",
   "version": "0.6.0",
+  "private": true,
   "author": "Micah Lee",
   "license": "GNU AGPLv3",
   "homepage": "https://github.com/micahflee/fixubuntu",
@@ -25,18 +26,18 @@
     "grunt": "~0.4.5",
     "grunt-contrib-clean": "~0.6.0",
     "grunt-contrib-concat": "~0.5.0",
-    "grunt-contrib-connect": "~0.8.0",
+    "grunt-contrib-connect": "~0.9.0",
     "grunt-contrib-copy": "~0.7.0",
-    "grunt-contrib-cssmin": "~0.10.0",
-    "grunt-contrib-htmlmin": "~0.3.0",
-    "grunt-contrib-uglify": "~0.6.0",
+    "grunt-contrib-cssmin": "~0.11.0",
+    "grunt-contrib-htmlmin": "~0.4.0",
+    "grunt-contrib-uglify": "~0.7.0",
     "grunt-contrib-watch": "~0.6.1",
-    "grunt-filerev": "~2.1.1",
+    "grunt-filerev": "~2.1.2",
     "grunt-html-validation": "~0.1.18",
-    "grunt-text-replace": "~0.3.12",
-    "grunt-uncss": "~0.3.7",
-    "grunt-usemin": "~2.5.1",
-    "load-grunt-tasks": "~1.0.0",
+    "grunt-text-replace": "~0.4.0",
+    "grunt-uncss": "~0.4.0",
+    "grunt-usemin": "~3.0.0",
+    "load-grunt-tasks": "~3.1.0",
     "time-grunt": "~1.0.0"
   },
   "engines": {
