--- a/package.json
+++ b/package.json
@@ -30,16 +30,13 @@
     "grunt-contrib-copy": "~0.8.0",
     "grunt-contrib-cssmin": "~0.12.2",
     "grunt-contrib-htmlmin": "~0.4.0",
-    "grunt-contrib-uglify": "~0.9.1",
     "grunt-contrib-watch": "~0.6.1",
     "grunt-filerev": "~2.3.0",
     "grunt-html-validation": "~0.1.18",
-    "grunt-text-replace": "~0.4.0",
     "grunt-uncss": "~0.4.2",
     "grunt-usemin": "~3.0.0",
     "load-grunt-tasks": "~3.1.0",
-    "time-grunt": "~1.1.1",
-    "lodash": "~2.4.1"
+    "time-grunt": "~1.1.1"
   },
   "engines": {
     "node": ">=0.10.0"
