--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "grunt-contrib-copy": "~0.8.0",
     "grunt-contrib-cssmin": "~0.12.2",
     "grunt-contrib-htmlmin": "~0.4.0",
+    "grunt-contrib-uglify": "~0.9.1",
     "grunt-contrib-watch": "~0.6.1",
     "grunt-filerev": "~2.3.0",
     "grunt-html-validation": "~0.1.18",
